assets/css/style.css
body {
	background-color: #b8c6f5; /* need a cool background image */
}

.jedi-image {
	border: 3px;
	border-color: black;
	border-style: solid;
	width: 150px;
	height: 150px;
	margin: 5px 5px;
}

.sith-image {
	border: 3px;
	border-color: black;
	border-style: solid;
	width: 150px;
	height: 150px;
	margin: 0 5px;
}

.jumbotron {
	text-align: center;
}

.fighter-row {
	height: 180px;
}

.text-dec {
	height: 100%;
	width: auto;
	font-size: 1.5em;
}

.control-button {
	text-align:center;
	border-width: 1px 1px 3px 3px;
	border-color: white;
	border-style: solid;
	background-color: green;
	margin: 1em 1em;
	color: white;
	font-weight: bold;
	height: 100%;
}

.control-button2 {
	text-align:center;
	border-width: 1px 1px 3px 3px;
	border-color: white;
	border-style: solid;
	background-color: orange;
	margin: 1em 1em;
	color: white;
	font-weight: bold;
}

#next-turn-column {
	padding-right:0px;
}

.inactive-button {
	background-color: gray;
	text-align:center;
	border: 2px;
	border-color: white;
	border-style: solid;
	margin: 1em 1em;
	color: white;
	font-weight: bold;
}

.highlighted-fighter {
	border-color: green!important;
}

.NA-fighter {
	border-color: red!important;
}

.selected-fighter {
	margin: 10px 0 0 10px;
}

.attacking-sith {
	border-color: red!important;
	margin: 10px 0 0 10px;
}

.unready {
	border-color: gray!important;
	margin: 10px 0 0 10px;
}

